# DualTF-FLsim

./: README.md  README_ARRAYS.md
dualflsim/: .gitignore  README.md  evaluation_fl.py  evaluation_fl_cpu.py  project_report.txt  pyproject.toml  requirements.txt  run_evaluation.py  run_simulation.py  simulation_summary.txt  task.py  test.py  test_workflow.py
dualflsim/configs/: default.yaml
dualflsim/dualflsim/: __init__.py  client_app.py  server_app.py  task.py
dualflsim/eval_results/: PSM_0_results.csv
dualflsim/freq_arrays/: PSM_0_freq_evaluation_array.pkl
dualflsim/model/: FrequencyTransformer.py  TimeTransformer.py
dualflsim/ray_temp/: session_latest
dualflsim/ray_temp/session_2025-09-07_23-46-49_682940_506963/: node_ip_address.json
dualflsim/utils/: array_generator.py  config.py  data_loader.py  dataset_cache.py  federated_partitioner.py  wandb_utils.py
dualflsim/wandb/: latest-run
dualflsim/wandb/run-20250916_085333-uq9lj5hx/: run-uq9lj5hx.wandb
dualflsim/wandb/run-20250916_105716-h9ntjl8b/: run-h9ntjl8b.wandb
dualflsim/wandb/run-20250916_113046-yqclbdid/: run-yqclbdid.wandb
dualflsim/wandb/run-20250916_142955-9y0vr09t/: run-9y0vr09t.wandb
dualflsim/wandb/run-20250918_164818-qpk6769c/: run-qpk6769c.wandb
dualflsim/wandb/run-20250918_172013-0o65b4ml/: run-0o65b4ml.wandb
dualflsim/wandb/run-20250919_032136-z130oz9n/: run-z130oz9n.wandb
dualflsim/wandb/run-20250919_141853-6wyn0zb3/: run-6wyn0zb3.wandb
dualflsim/wandb/run-20250919_142647-rxm998ke/: run-rxm998ke.wandb
dualflsim/wandb/run-20250919_145233-8c13tcb7/: run-8c13tcb7.wandb
(+65 files in other folders)
