[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dualflsim"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "huy"

[tool.flwr.app.components]
serverapp = "dualflsim.server_app:app"
clientapp = "dualflsim.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.name = "ray"
options.backend.config.ray_init_args.runtime_env.conda.env_name = "dualtf-env"
options.backend.config.client_resources.num_gpus = 1